# homework13

./: .env  Cargo.toml
client/: Cargo.toml
client/examples/: device.rs  example1.rs  house.rs  room.rs
client/src/: error.rs  lib.rs
server/: Cargo.toml  diesel.toml
server/migrations/2025-06-02-165530_create_houses/: down.sql  up.sql
server/migrations/2025-06-04-060151_create_rooms/: down.sql  up.sql
server/migrations/2025-06-04-061426_create_devices/: down.sql  up.sql
server/src/: error.rs  main.rs  model.rs  schema.rs
shared/: Cargo.toml
shared/src/: lib.rs
