[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros"], optional = true }
dotenv = { version = "0.15.0", optional = true }
env_logger = { version = "0.11.8", optional = true }
serde = "1.0.219"
shared = { path = "../shared" }
uuid = "1.17.0"

[features]
examples = ["dep:tokio", "dep:dotenv", "dep:env_logger"]

[[example]]
name = "example1"
required-features = ["examples"]
