[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
clap = "4.5.38"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["trace"] }
shared = { path = "../shared" }
diesel = { version = "2.2.10", features = ["uuid"] }
uuid = "1.17.0"
diesel-async = { version = "0.5.2", features = ["postgres", "bb8"] }
bb8 = "0.8"
